--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
+dj-database-url==0.5.0
 Django==3.1.4
 django-bootstrap4==2.3.1
+django-heroku==0.3.1
 gunicorn==20.0.4
 Pillow==8.0.1
 psycopg2==2.8.6
@@ -9,3 +11,4 @@ pyparsing==2.4.7
 pytz==2020.4
 soupsieve==2.0.1
 sqlparse==0.4.1
+whitenoise==5.2.0
